--- a/decklist/templates/decklist/decklist_simulator_result.html
+++ b/decklist/templates/decklist/decklist_simulator_result.html
@@ -17,10 +17,10 @@
     </tr>
     </table>
     <br>
-    <p>Hand Results</p>
+    <h2 class="titles">Hand Results</h2>
     <p>
     {% for result in output %}
-     {{ result }}<br>
+     <p class="center">{{ result }}</p>
     {% endfor %}
     </p>
 {% endblock %}
