--- a/decklist/static/css/decklist.css
+++ b/decklist/static/css/decklist.css
@@ -1,16 +1,12 @@
-body {
-    padding-left: 15px;
-}
-
 h1 a, h2 a {
     color: #1f9e63;
     font-family: 'Arial';
 }
 .page-header {
-    background-color: #6eaed8;
+    background-color: #489e36;
     margin-top: 0;
-    margin-bottom: 40px;
-    padding: 20px 20px 20px 40px;
+    margin-bottom: 20px;
+    padding: 20px;
 }
 
 .page-header h1,
@@ -119,4 +115,12 @@ h4 {
 .btn-secondary:hover {
     color: #FFFFFF;
     background-color: #641838;
+}
+
+.titles{
+    text-align: center;
+}
+
+.center{
+    text-align: center;
 }
