--- a/decklist/templates/decklist/homepage.html
+++ b/decklist/templates/decklist/homepage.html
@@ -1,7 +1,6 @@
 {% extends 'decklist/base.html' %}
 
 {% block content %}
-    <h2 class="center">Welcome to the Home Page.</h2>
-    <h2 class="center">Login or Register to get started.</h2>
+    <h2>Welcome to the Home Page, Login to get started</h2>
 
 {% endblock %}
