--- a/decklist/static/css/decklist.css
+++ b/decklist/static/css/decklist.css
@@ -3,10 +3,10 @@ h1 a, h2 a {
     font-family: 'Arial';
 }
 .page-header {
-    background-color: #489e36;
+    background-color: #6eaed8;
     margin-top: 0;
-    margin-bottom: 20px;
-    padding: 20px;
+    margin-bottom: 40px;
+    padding: 20px 20px 20px 40px;
 }
 
 .page-header h1,
@@ -115,12 +115,4 @@ h4 {
 .btn-secondary:hover {
     color: #FFFFFF;
     background-color: #641838;
-}
-
-.titles{
-    text-align: center;
-}
-
-.center{
-    text-align: center;
 }
