--- a/decklist/templates/decklist/decklist_detail.html
+++ b/decklist/templates/decklist/decklist_detail.html
@@ -4,35 +4,32 @@
     <article class="decklist">
         <aside class="actions">
             {% if user.is_authenticated %}
-            <a href="{% url 'decklist_edit' pk=decklist.pk %}" class="button2">Edit Decklist</a>
+            <a href="{% url 'decklist_edit' pk=decklist.pk %}" class="button2">Decklist Settings</a>
             <a href="{% url 'decklist_simulator_run' pk=decklist.pk %}" class="button2">Run Simulator</a>
+            <a href="{% url 'combo_detail' pk=decklist.pk %}" class="button2">View Combos</a>
+            <a href="{% url 'card_new' pk=decklist.pk %}" class="button2">Add New Card</a>
             {% endif %}
         </aside>
-        <h1 class="titles">{{ decklist.title }}</h1>
-
-        <table class="table">
-            <tr>
-                <td>Card Name</td>
-                <td>Copies</td>
-                <td>Engine/Non-Engine</td>
-                <td>Categorization</td>
-            </tr>
-            {% for row in clean_dict %}
-            <tr>
-                <td>{{ row.Name }}</td>
-                <td>{{ row.Copies }}</td>
-                <td>{{ row.Engine }}</td>
-                <td>{{ row.Categorization }}</td>
-            </tr>
-            {% endfor %}
-          </table>  
-
-        <h1>Combos</h1>
-        <p>
-            {% for combo in decklist.deck_combo %}
-            {{ combo }}<br>
-            {% endfor %}
-        </p>
+        <h2>{{ decklist.title }}</h2>
+        
+        <table style="width:100%">
+        <tr>
+            <th>Card Name</th>
+            <th>Card Amount</th>
+            <th>Card Classification</th>
+            <th></th>
+            <th></th>
+        </tr>
+        
+        {% for card in cards %}
+        <tr>
+        <td>{{ card.card_name }}</td>
+        <td>{{ card.card_amount }}</td>
+        <td>{{ card.card_classification }}</td>
+        <td><a href="{% url 'card_edit' pk=card.pk %}">Edit</a></td>
+        <td><a href="{% url 'delete_card' pk=card.pk %}">Delete</a></td>
+        </tr>
+        {% endfor %}
+        </table>
     </article>
 {% endblock %}
-
