--- a/decklist/templates/decklist/decklist_edit.html
+++ b/decklist/templates/decklist/decklist_edit.html
@@ -2,6 +2,11 @@
 
 {% block content %}
     <h2>{{ layout }}</h2>
+    <aside class="actions">
+        {% if user.is_authenticated %}
+        <a href="{% url 'decklist_sample' %}" class="button2">Sample Decklist</a>
+        {% endif %}
+    </aside>
     <form method="POST" class="decklist-form">{% csrf_token %}
         {{ form.as_p }}
         <button type="submit" class="save btn btn-secondary">Save</button>
