--- a/decklist/templates/decklist/logout.html
+++ b/decklist/templates/decklist/logout.html
@@ -1,6 +1,8 @@
 {% extends 'decklist/base.html' %}
 
 {% block content %}
-    <h2>You have been logged out</h2>
-
+    <form method="post" action="{% url 'logout_page' %}">
+        {% csrf_token %}
+        <button type="submit">logout</button>
+    </form>
 {% endblock %}
