--- a/decklist/templates/decklist/base.html
+++ b/decklist/templates/decklist/base.html
@@ -25,13 +25,11 @@
         {% if user.is_authenticated %}
         <a href="{% url 'decklist_new' %}" class="button">New Decklist
         </a>
-        <a href="{% url 'logout_page' %}" class="button">Logout
-        </a>
+        <a href="{% url 'logout_page' %}" class="button">Logout</a>
         <h1><a href="/decklist/">Decklist Simulator</a></h1>
         {% else %}
-        <a href="{% url 'login_page' %}" class="button">Login
+        <a href="{% url 'index' %}" class="button">Login
         </a>
-        <a href="{% url 'register_page' %}" class="button">Register</a>
         <h1><a href="/">Decklist Simulator</a></h1>
         {% endif %}
 
